<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/ItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_name"
        android:textSize="30sp"/>


    <EditText
        android:id="@+id/EditItem"
        android:layout_below="@id/ItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:lines="1" />

    <TextView
        android:id="@+id/Category"
        android:layout_below="@id/EditItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_category"
        android:textSize="30sp"/>

    <Spinner
        android:layout_below="@id/Category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:entries="@array/item_category"
        ></Spinner>


    <TextView
        android:id="@+id/ExpirationDate"
        android:layout_below="@id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expiration_date"
        android:textSize="30sp"/>


    <EditText
        android:id="@+id/EditDate"
        android:layout_width="140sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ExpirationDate"
        android:inputType="text"
        android:hint="YYYYMMDD"/>

    <Button
        android:id="@+id/ButtonDate"
        android:layout_below="@id/ExpirationDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/set_date"
        android:layout_toRightOf="@id/EditDate"
        android:onClick="buttonDate"/>

    <TextView
        android:id="@+id/Quantity"
        android:layout_below="@id/ButtonDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity_of_items"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/EditQuantity"
        android:layout_below="@id/Quantity"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:inputType="number"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_below="@id/EditQuantity"
        android:text="@string/submit"
        android:onClick="buttonSubmit"
        />

    <Button
        android:id="@+id/clear"
        android:layout_below="@id/EditQuantity"
        android:layout_toRightOf="@id/submit"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:text="@string/clear"
        android:onClick="Clear"
        />

</RelativeLayout>
